--- a/.github/workflows/ci_build_library.yaml
+++ b/.github/workflows/ci_build_library.yaml
@@ -61,29 +61,29 @@ jobs:
         # See the following page for a list of valid cibuildwheel arch values:
         # https://cibuildwheel.pypa.io/en/stable/options/#archs
         conf: [
-          {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 10},
-          {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 11},
-          {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 12},
-          {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 13},
+          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 10},
+          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 11},
+          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 12},
+          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 13},
 
-          {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 10},
-          {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 11},
-          {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 12},
-          {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 13},
+          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 10},
+          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 11},
+          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 12},
+          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 13},
 
-          {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
-          {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
-          {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
-          {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
+          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
+          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
+          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
+          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
 
-          {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
-          {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
-          {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
-          {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
+          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
+          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
+          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
+          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
 
           {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 10},
-          {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 11},
-          {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 12},
+          # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 11},
+          # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 12},
           # This fails with NumPy 1.x. TODO: uncomment when qsim supports np 2.
           # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 13},
         ]
@@ -114,19 +114,19 @@ jobs:
         run: pip install -r requirements.txt
 
       - if: matrix.conf.os != 'windows-2022'
-        name: Run the build and test script (Windows case)
+        name: Run the build and test script (non-Windows case)
         env:
           # SHELLOPTS is used by Bash. Add xtrace when doing manual debug runs.
           SHELLOPTS: ${{inputs.trace && 'xtrace' || '' }}
         run: dev_tools/test_libs.sh --config=verbose
 
       - if: matrix.conf.os == 'windows-2022'
-        name: Run the build and test script (non-Windows)
+        name: Run the build and test script (Windows)
         env:
           pyroot: 'C:\\hostedtoolcache\\windows\\Python'
           pyexe: '${{steps.setup.outputs.python-version}}\\${{matrix.conf.pyarch}}\\python3.exe'
           SHELLOPTS: ${{inputs.trace && 'xtrace' || '' }}
         shell: cmd
         run: >-
-          bash dev_tools/test_libs.sh --config=verbose
+          bash -x dev_tools/test_libs.sh --config=verbose
           --action_env PYTHON_BIN_PATH=${{env.pyroot}}\\${{env.pyexe}}
