--- a/.github/workflows/ci_build_library.yaml
+++ b/.github/workflows/ci_build_library.yaml
@@ -43,55 +43,67 @@ concurrency:
   group: ${{github.workflow}}-${{github.event.pull_request.number||github.ref}}
 
 jobs:
-  find-changes:
-    name: Find changed files
-    uses: ./.github/workflows/reusable_find_changes.yaml
-    secrets: inherit
-
-  build-wheels:
-    # For efficiency, skip this workflow if there were no code file changes.
-    if: needs.find-changes.outputs.code || github.event_name == 'workflow_dispatch'
-    name: ${{matrix.conf.os}}/${{matrix.conf.pyarch}}/py3${{matrix.conf.py}}
-    needs: find-changes
-    runs-on: ${{matrix.conf.os}}
-    timeout-minutes: 20
-    strategy:
-      fail-fast: false
-      matrix:
-        # See the following page for a list of valid cibuildwheel arch values:
-        # https://cibuildwheel.pypa.io/en/stable/options/#archs
-        conf: [
-          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 10},
-          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 11},
-          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 12},
-          # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 13},
-
-          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 10},
-          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 11},
-          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 12},
-          # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 13},
-
-          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
-          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
-          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
-          # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
-
-          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
-          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
-          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
-          # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
-
-          {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 10},
-          # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 11},
-          # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 12},
-          # This fails with NumPy 1.x. TODO: uncomment when qsim supports np 2.
-          # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 13},
-        ]
+  test:
+    runs-on: windows-2022
     steps:
-      - run: |
+      - continue-on-error: true
+        run: |
           wmic cpu get Caption,InstructionSet /value
 
+      - continue-on-error: true
+        run: |
+          wmic cpu get Caption /value
 
+      - continue-on-error: true
+        run: |
+          wmic cpu get InstructionSet /value
+
+
+  # find-changes:
+  #   name: Find changed files
+  #   uses: ./.github/workflows/reusable_find_changes.yaml
+  #   secrets: inherit
+
+  # build-wheels:
+  #   # For efficiency, skip this workflow if there were no code file changes.
+  #   if: needs.find-changes.outputs.code || github.event_name == 'workflow_dispatch'
+  #   name: ${{matrix.conf.os}}/${{matrix.conf.pyarch}}/py3${{matrix.conf.py}}
+  #   needs: find-changes
+  #   runs-on: ${{matrix.conf.os}}
+  #   timeout-minutes: 20
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       # See the following page for a list of valid cibuildwheel arch values:
+  #       # https://cibuildwheel.pypa.io/en/stable/options/#archs
+  #       conf: [
+  #         # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 10},
+  #         # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 11},
+  #         # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 12},
+  #         # {os: ubuntu-24.04, wh: manylinux, arch: x86_64, pyarch: x64, py: 13},
+
+  #         # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 10},
+  #         # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 11},
+  #         # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 12},
+  #         # {os: macos-13, wh: macosx, arch: x86_64, pyarch: x64, py: 13},
+
+  #         # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
+  #         # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
+  #         # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
+  #         # {os: macos-14, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
+
+  #         # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 10},
+  #         # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 11},
+  #         # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 12},
+  #         # {os: macos-15, wh: macosx, arch: arm64, pyarch: arm64, py: 13},
+
+  #         {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 10},
+  #         # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 11},
+  #         # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 12},
+  #         # This fails with NumPy 1.x. TODO: uncomment when qsim supports np 2.
+  #         # {os: windows-2022, wh: win, arch: AMD64, pyarch: x64, py: 13},
+  #       ]
+  #   steps:
       # - name: Check out a copy of the git repository
       #   uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4
       #   with:
