--- a/.github/workflows/ci_build_library.yaml
+++ b/.github/workflows/ci_build_library.yaml
@@ -48,7 +48,7 @@ jobs:
     steps:
       - continue-on-error: true
         run: |
-          WMIC CPU Get DeviceID,NumberOfCores,NumberOfLogicalProcessors
+          WMIC CPU Get NumberOfLogicalProcessors
 
       - continue-on-error: true
         run: |
