--- a/.github/workflows/ci_build_library.yaml
+++ b/.github/workflows/ci_build_library.yaml
@@ -54,6 +54,15 @@ jobs:
         run: |
           wmic cpu get Name, Caption, InstructionSet
 
+      - continue-on-error: true
+        run: |
+          lscpu
+
+      - continue-on-error: true
+        shell: bash
+        run: |
+          lscpu
+
       # - continue-on-error: true
       #   run: |
       #     coreinfo64
