--- a/.github/workflows/ci_build_library.yaml
+++ b/.github/workflows/ci_build_library.yaml
@@ -63,6 +63,10 @@ jobs:
         run: |
           lscpu
 
+      - continue-on-error: true
+        run: |
+          Get-WmiObject Win32_Processor | Select-Object -Property Name, Description, ProcessorId
+
       # - continue-on-error: true
       #   run: |
       #     coreinfo64
