--- a/.github/workflows/ci_build_library.yaml
+++ b/.github/workflows/ci_build_library.yaml
@@ -48,24 +48,22 @@ jobs:
     steps:
       - continue-on-error: true
         run: |
-          wmic cpu get InstructionSet
-
-      - continue-on-error: true
-        run: |
-          wmic cpu get Name, Caption, InstructionSet
-
-      - continue-on-error: true
-        run: |
-          lscpu
+          python -c 'import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))'
 
       - continue-on-error: true
         shell: bash
         run: |
-          lscpu
+          python -c 'import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))'
 
       - continue-on-error: true
+        shell: python
         run: |
-          Get-WmiObject Win32_Processor | Select-Object -Property Name, Description, ProcessorId
+          import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))
+
+      - continue-on-error: true
+        shell: python3
+        run: |
+          import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))
 
       # - continue-on-error: true
       #   run: |
