--- a/.github/workflows/ci_build_library.yaml
+++ b/.github/workflows/ci_build_library.yaml
@@ -46,6 +46,15 @@ jobs:
   test:
     runs-on: windows-2022
     steps:
+      - name: Set up Python with caching of pip dependencies
+        uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065 # v5
+        id: setup
+        with:
+          python-version: '3.12'
+
+      - name: Install
+        run: pip install py-cpuinfo
+
       - continue-on-error: true
         run: |
           python -c 'import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))'
@@ -60,10 +69,7 @@ jobs:
         run: |
           import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))
 
-      - continue-on-error: true
-        shell: python3
-        run: |
-          import cpuinfo; print(" ".join(cpuinfo.get_cpu_info()["flags"]))
+
 
       # - continue-on-error: true
       #   run: |
